# zarr-normalize

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: normalize.py
