[tool.poetry]
name = "zarr-normalize"
version = "0.1.0"
description = ""
authors = ["Yurii Zubov <zubov452@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
dask = {extras = ["distributed"], version = "^2023.12.0"}
zarr = "^2.16.0"
click = "^8.1.6"
numcodecs = "^0.12.0"
dask-jobqueue = "0.8.2"
bokeh = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
